Joda-Time version 1.6.1
-----------------------

Joda-Time is a date and time handling library that seeks to replace the JDK
Date and Calendar classes.

This is a patch release for Joda-Time 1.6.
This release only contains bug fixes.
We recommend all users of 1.6 upgrade to 1.6.1.

We recommend JDK 1.4 or later, and have performed no testing on earlier JDKs.

Joda-Time is licensed under the business-friendly Apache License Version 2.
This is the same license as all of Apache, plus other open source projects such as Spring.
The intent is to make the code available to the Java community with the minimum
of restrictions. If the license causes you problems please contact the mailing list.

**  Please also check out our related projects   **
** http://joda-time.sourceforge.net/related.html **


Compatibility with 1.6
----------------------
Binary compatible - Yes

Source compatible - Yes

Serialization compatible - Yes

Data compatible - Yes, except
  - DateTimeZone data updated to version 2010k

Semantic compatible - Yes


Deprecations since 1.6
----------------------
- None


Bug fixes since 1.6
-------------------
- Time zone compiler now handles non-UTC better


Enhancements since 1.6
----------------------
- None


Feedback
--------
All feedback is welcomed via the joda-interest mailing list.

The Joda team
http://joda-time.sourceforge.net